Sökfönster tillsammans med länk i navbar

--- a/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                            
                             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-end" id="funka" aria-labelledby="navbarDropdown">
                                 <li>
+                                    <a class="dropdown-item text-black" href="/Search/SearchWindow"><i class="fa-solid fa-magnifying-glass text-black"></i>Sök</a>
+                                </li>
+                                <li>
                                     <a class="dropdown-item text-black" href="#">
                                 <i class="fa-solid fa-envelope text-black"></i>
                                 <span class="badge rounded-pill badge-notification bg-danger">1</span>
