--- a/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfileSettings.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfileSettings.cshtml
@@ -65,6 +65,20 @@
                 <input type="password" class="bg-light form-control" placeholder="**********">
             </div>
         </div>
+        <div class="row py-2">
+            <div class="col-md-6">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" style="accent-color:#ff6219">
+                    <label class="settingsLbl form-check-label" for="flexCheckDefault">
+                        Privat
+                    </label>
+            </div>
+            <div class="col-md-6 pt-md-0 pt-3">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" style="border-color:#ff6219;">
+                    <label class="settingsLbl form-check-label" for="flexCheckDefault">
+                        Offentlig
+                    </label>
+            </div>
+        </div>
         <div class="py-3 pb-4 border-bottom">
             <button class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Spara Ändringar</button>
             <button class="btn border border-light button" style="background-color: #fff;; color: #ff6219">Avbryt</button>
