--- a/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfileSettings.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfileSettings.cshtml
@@ -67,13 +67,13 @@
         </div>
         <div class="row py-2">
             <div class="col-md-6">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" style="accent-color:#ff6219">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     <label class="settingsLbl form-check-label" for="flexCheckDefault">
                         Privat
                     </label>
             </div>
             <div class="col-md-6 pt-md-0 pt-3">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" style="border-color:#ff6219;">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     <label class="settingsLbl form-check-label" for="flexCheckDefault">
                         Offentlig
                     </label>
