--- a/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
@@ -1,5 +1,18 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model ChatListViewModel
+
+@foreach (Message mess in Model._messages)
+{
+            <div class"card">
+
+                <h3> @mess.Sender.FirstName @mess.Sender.LastName </h3>
+                <h4> @mess.Subject</h4>
+                <a  class="btn btn-primary text-light"
+                          style="background-color:#ff6219; margin-bottom:2rem;"
+                          asp-controller="Chat"
+                          asp-action="Chat11"
+                          asp-route-id="1">
+                          Visa Meddelanden
+               </a>
+
+            </div>
 }
