--- a/CV_Projekt/CV_Projekt/Views/Account/Register.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
 			<label>Användarnamn: </label>
 		</div>
 		<div class="col-sm-4">
-			<input asp-for="UserName" class="form-control"/>
+			<input asp-for="Email" class="form-control"/>
 		</div>
 	</div>
 	<div class="form-group row">
