Profile är nu Cv

--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -62,7 +62,7 @@
                             }
                             
                                 <div class="text-center position-absolute bottom-0 start-0 w-100">
-                                    <form asp-controller="Profile" asp-action="IncrementCvViews" method="post">
+                                    <form asp-controller="Cv" asp-action="IncrementCvViews" method="post">
                                         <input type="hidden" name="id" value="@cv.Id"/>
                                         <button type="submit" class="btn text-light"
                                                 style="background-color:#ff6219; margin-bottom:2rem;">
