--- a/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
@@ -8,6 +8,13 @@
            asp-controller="Chat"
            asp-action="Add"
            asp-route-senderId="Model.message.RecieverId"
-           asp-route-recieverId="Model">
-           Visa Meddelanden
+           asp-route-recieverId="Model.message.SenderId">
+           Svara
+</a>
+<a  class="btn btn-primary text-light"
+           style="background-color:#ff6219; margin-bottom:2rem;"
+           asp-controller="Message"
+           asp-action="ChatList"
+           asp-route-id="Model.message.RecieverId">
+           Tillbaka
 </a>
