--- a/CV_Projekt/CV_Projekt/Views/Account/Register.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/Register.cshtml
@@ -3,14 +3,14 @@
 //Vill lägga in javascript, sorry lämnar det såhär for now
 
 <h1>Registrera dig</h1>
-<div asp-validation-summary="All" class="text-danger"></div>
+<div asp-validation-summary="All" class="text-danger">here there be errors</div>
 <form method="post" asp-action="Register" onsubmit="">
 	<div class="form-group row">
 		<div class="col-sm-2">
-			<label>Användarnamn: </label>
+			<label>Epost: </label>
 		</div>
 		<div class="col-sm-4">
-			<input asp-for="Email" class="form-control"/>
+			<input asp-for="Email" class="form-control" />
 		</div>
 	</div>
 	<div class="form-group row">
@@ -27,14 +27,6 @@
 		</div>
 		<div class="col-sm-4">
 			<input asp-for="LastName" class="form-control" />
-		</div>
-	</div>
-	<div class="form-group row">
-		<div class="col-sm-2">
-			<label>Epost: </label>
-		</div>
-		<div class="col-sm-4">
-			<input asp-for="Email" class="form-control" />
 		</div>
 	</div>
 	<div class="form-group row">
