--- a/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfileSettings.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfileSettings.cshtml
@@ -81,7 +81,7 @@
         </div>
         <div class="py-3 pb-4 border-bottom">
             <button class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Spara Ändringar</button>
-            <button class="btn border border-light button" style="background-color: #fff;; color: #ff6219">Avbryt</button>
+            <button class="btn border border-light button" style="background-color: #fff; color: #ff6219">Avbryt</button>
         </div>
         <div class="d-sm-flex align-items-center pt-3" id="deactivate">
             <div>
