--- a/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Chat/Chat11.cshtml
@@ -1,20 +1,21 @@
 ﻿@model Message
 
-<h3> Model.message.Sender.FirstName Model.message.Sender.LastName </h3>
-<h4> Model.message.Subject</h4>
-<h4> Model.message.Context</h4>
+<h3> @Model.Sender.FirstName @Model.Sender.LastName </h3>
+<h4> @Model.Subject</h4>
+<h4> @Model.Content</h4>
 <a  class="btn btn-primary text-light"
            style="background-color:#ff6219; margin-bottom:2rem;"
-           asp-controller="Chat"
+           asp-controller="Message"
            asp-action="Add"
-           asp-route-senderId="Model.message.RecieverId"
-           asp-route-recieverId="Model.message.SenderId">
+           asp-route-senderId="@Model.RecieverId"
+           asp-route-recieverId="@Model.SenderId">
            Svara
 </a>
+
 <a  class="btn btn-primary text-light"
            style="background-color:#ff6219; margin-bottom:2rem;"
            asp-controller="Message"
            asp-action="ChatList"
-           asp-route-id="Model.message.RecieverId">
+           asp-route-id="@Model.RecieverId">
            Tillbaka
 </a>
