--- a/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
@@ -11,7 +11,7 @@
                           asp-controller="Chat"
                           asp-action="Chat11"
                           asp-route-senderId="@mess.SenderId"
-                          asp-route-receiverId="@mess.RecieverId">
+                          asp-route-receiverId="@mess.ReceiverId">
                           Visa Meddelande
                </a>
 
