--- a/CV_Projekt/CV_Projekt/Views/Message/Add.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/Add.cshtml
@@ -19,9 +19,9 @@
 	<label>RecieverId </label>
 	<input asp-for="RecieverId" />
 	<br />	 *@
-	<input asp-for="@Model.Sender.Id" type="hidden" value="@Model.Sender.Id" />
-	<input asp-for="@Model.Receiver.Id" type="hidden" value="@Model.Receiver.Id" />
-	<input type="hidden" name="Date" value="DateTime.Now" />
+	<input asp-for="@Model.Message.SenderId" type="hidden" value="@Model.Sender.Id" />
+	<input asp-for="@Model.Message.ReceiverId" type="hidden" value="@Model.Receiver.Id" />
+	<input asp-for="@Model.Message.Date" type="hidden" name="Date" value="DateTime.Now" />
 	<br />
 	<br />
 	<button type="submit">Skicka</button>
