--- a/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/LogIn.cshtml
@@ -33,7 +33,8 @@
                                     </div>
 
                                     <div>
-                                        <input type="checkbox" value="Kom ihåg mig:" asp-for="RememberMe" />
+                                        <label class="form-label" for="form2Example27">Kom ihåg mig</label>
+                                        <input type="checkbox" asp-for="RememberMe" />
                                     </div>
 
                                     <div class="pt-1 mb-4">
