projekt-länk från profil

--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -11,3 +11,9 @@
         </button>
     </form>
 </div>
+
+<button class="btn btn-primary">
+    <a asp-controller="ProfileProject" asp-action="ProfileProject" asp-rout-id="@Model.User.Id">
+        PROJEKT
+    </a>
+</button>
