createcvview litegrann, och en knapp för att skapa cv

--- a/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/UserProfile/UserProfile.cshtml
@@ -14,6 +14,10 @@
 								<i class="fa-solid fa-gear"></i> <a asp-controller="UserProfile" asp-action="UserProfileSettings">Ändra Profil</a>
                             </button>
                             <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
+                                <i class="fa-solid fa-file-circle-plus"></i>
+                                <a>Skapa CV</a>
+                            </button>
+                            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
                                 <i class="fa-solid fa-envelope text-black position-relative">
                                     <span class="badge rounded-pill badge-notification bg-danger position-absolute top-0 left-0 translate-middle" style="font-size:0.5rem;">1</span>
                                 </i>
