--- a/CV_Projekt/CV_Projekt/Views/Cv/CreateCv.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/CreateCv.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProjectViewModel
 
 @{
-	ViewData["Title"] = "Projekt";
+    ViewData["Title"] = "Skapa CV";
 }
 
 <body class="bodyUserProfileSettings"
@@ -20,72 +20,86 @@
         <h4 class="pb-4 border-bottom"
             style="letter-spacing: -1px;
                    font-weight: 400;">
-            Lägg till Projekt
+            Skapa CV
         </h4>
         <div class="py-2">
-            <form asp-action="ProjectView" method="post">
+            <form  method="post">
             <div class="row py-2">
+                <h6>Lägg till arbete</h6>
                 <div class="col-md-6">
-                    <label class="settingsLbl" for="title">Projektets Titel</label>
-                    <input asp-for="ProjectToSave.Title" type="text" class="bg-light form-control">
+                    <label class="settingsLbl" for="title">Arbetsplats</label>
+                    <input  type="text" class="bg-light form-control">
+                        
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3">
-                    <label class="settingsLbl" for="startdate">Startdatum</label>
-                    <input asp-for="ProjectToSave.StartDate" type="date" class="bg-light form-control">
+                    <label class="settingsLbl" for="startdate">Arbetsbeskrivning</label>
+                    <input  type="text" class="bg-light form-control">
+                    <button type="button" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Lägg till Arbete</button>
                 </div>
             </div>
             <div class="row py-2">
-				<div class="col-md-6">
-					<label class="settingsLbl" for="projDescription">Projektbeskrivning</label>
-					<input asp-for="ProjectToSave.Description" type="text" class="bg-light form-control">
-                    
+                    <h6>Lägg till utbildning</h6>
+                <div class="col-md-6">
+                    <label class="settingsLbl" for="projDescription">Utbildning</label>
+                    <input type="text" class="bg-light form-control">
+
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3">
-                     <label class="settingsLbl" for="enddate">Slutdatum</label>
-                     <input asp-for="ProjectToSave.EndDate" type="date" class="bg-light form-control">
+                     <label class="settingsLbl" for="enddate">Utbildningsbeskrivning</label>
+                     <input type="text" class="bg-light form-control">
+                        <button type="button" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Lägg till Utbildning</button>
+                     
                 </div>
             </div>
+                <div class="row py-2">
+                    <h6>Lägg till annan erfarenhet</h6>
+                    <div class="col-md-6">
+                        <label class="settingsLbl" for="projDescription">Annan erfarenhet</label>
+                        <input type="text" class="bg-light form-control">
+
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                        <label class="settingsLbl" for="enddate">Beskrivning</label>
+                        <input type="text" class="bg-light form-control">
+                        <button type="button" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Lägg till erfarenhet</button>
+
+                    </div>
+                </div>
+                <div class="row py-2">
+                    <h6>Lägg till skills</h6>
+                    <div class="col-md-6">
+                        <label class="settingsLbl" for="projDescription">Skill</label>
+                        <input type="text" class="bg-light form-control">
+
+                    </div>
+                    <div class="col-md-6 pt-md-0 pt-3">
+                        @* <label class="settingsLbl" for="enddate">Beskrivning</label>
+                        <input type="text" class="bg-light form-control"> *@
+                        <button type="button" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Lägg till skill</button>
+
+                    </div>
+                </div>
+
             <div class="row py-2">
                 <div class="col-md-6 ">
                     <label class="settingsLbl" for="projCreator">Skapare av projekt</label>
                         <input value="@User.Identity" asp-for="ProjectToSave.CreatorId" type="text" class="bg-light form-control">
                 </div>
                     <div class="col-md-6 pt-md-0 pt-3">
-                        
+
                             </div>
                             </div>
-                <div class="row py-2">
-                    <div class="col-md-6 d-flex align-items-center justify-content-center">
-                        
-                        <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" style="background-color:#fff; color:#ff6219;" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fa-solid fa-plus"></i><i class="fa-solid fa-user"></i>Lägg till Deltagare
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-lg-end scroll" id="dropdownMenu" aria-labelledby="dropdownMenuButton">
-                            @foreach (var user in Model.Users)
-                            {
-                                <li><a class="dropdown-item" href="#" data-title="@user.FirstName @user.LastName">@user.FirstName @user.LastName</a></li>
-                            }
-                        </ul>
-                    </div>
+                
 
-                    <div class="col-md-6 pt-md-0 pt-3" id="listgroupdiv">
-
-                        <label class="settingsLbl" for="chosenParticipants">Projektdeltagare</label>
-                        <ul id="selectedParticipantsList" class="list-group">
-                          
-                        </ul>
-                    </div>
-                </div>
-               
             <div class="py-3 pb-4 border-bottom">
-                <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Skapa Projekt</button>
+                <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Skapa CV</button>
                 <button class="btn border border-light button" style="background-color: #fff;; color: #ff6219">Avbryt</button>
             </div>
-           
+
             </form>
         </div>
     </div>
-    <script>
+   @*  <script>
             document.addEventListener("DOMContentLoaded", function() {
             var items = document.querySelectorAll(".dropdown-item");
             var participantsList = document.getElementById("selectedParticipantsList");
@@ -94,9 +108,9 @@
                 item.addEventListener("click", function(event) {
                     var selectedTitle = event.target.getAttribute("data-title");
 
-                    
+
                     if (!isParticipantAdded(selectedTitle)) {
-                       
+
                         var li = document.createElement("li");
                         li.classList.add("list-group-item");
                         li.textContent = selectedTitle;
@@ -128,5 +142,5 @@
         });
 
 
-    </script>
+    </script>*@
 </body>
