--- a/CV_Projekt/CV_Projekt/Views/Cv/Cv.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/Cv.cshtml
@@ -135,11 +135,11 @@
 
 <div class="d-flex justify-content-center mt-2">
 	<a asp-controller="Home" asp-action="Index" class="btn btn-primary">Startsida</a>
-</div>
+</div>*@
 
 <div class="d-flex justify-content-center mt-2">
-	<a asp-controller="Profile" asp-action="Profile" asp-route-id="@Model.User.Id" class="btn btn-primary">VISA PROFIL</a>
-</div> *@
+	<a asp-controller="Profile" asp-action="Profile" asp-route-id="@Model.Owner.Id" class="btn btn-primary">VISA PROFIL</a>
+</div> 
 
 
 
@@ -187,7 +187,10 @@
 						<div class="col-sm-4">
 					<div class="card-body p-4 text-black">
 						<div class="mb-5  text-body">
-										<button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;">
+										<button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark text-body" data-mdb-ripple-color="dark" style="z-index: 1;"
+										asp-Controller="Profile"
+										asp-action="Profile"
+										asp-route-id="@Model.Owner.Id">
 											Till Profil
 										</button>
 							<h6 class="lead fw-normal mb-1">Kontakt</h6>
