--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -12,10 +12,9 @@
     </form>
 </div>
 
-<button class="btn btn-primary"
-        asp-controller="ProfileProject" 
-        asp-action="ProfileProject"
-        asp-route-id="@Model.User.Id">
-        PROJEKT
-    
-</button>
+<div class="d-flex justify-content-center mt-2">
+    <a asp-controller="ProfileProject" asp-action="ProfileProject" asp-route-id="@Model.User.Id" class="btn btn-primary">VISA PROJEKT</a>
+</div>
+
+
+
